# literally-every-lang

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
src/: interpreter.py
tests/: test_lel.py
